--- a/src/main/resources/templates/GoodManager.html
+++ b/src/main/resources/templates/GoodManager.html
@@ -13,7 +13,12 @@
 		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
 		<!-- https://getbootstrap.com/ -->
 		<link rel="stylesheet" th:href="@{/css/templatemo-style.css}">
-
+		<style type="text/css">
+			td{
+				line-height: 82px;
+			}
+		
+		</style>
 	</head>
 
 	<body id="reportsPage">
