--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -388,7 +388,7 @@
 						dataType:"text",
 						success:function(result){
 							alert(result);
-							window.location.reload();
+							window.location.href='querydingdan'
 						}
 					})
 				})
