--- a/src/main/resources/templates/pagehome.html
+++ b/src/main/resources/templates/pagehome.html
@@ -86,26 +86,9 @@
 									</li>
 									<li data-toggle="sub-header" data-target="#sub-cart">
 										<!-- SHOPPING CART -->
-										<a href="javascript:void(0);" id="total-cart">
+										<a th:href="@{/customer/look}" id="total-cart">
 											<i class="iconfont-shopping-cart round-icon"></i>
 										</a>
-
-										<div id="sub-cart" class="sub-header">
-											<div class="cart-header">
-												<span>你的购物车是空的</span>
-												<small><a href="cart.html">(See All)</a></small>
-											</div>
-											<ul class="cart-items product-medialist unstyled clearfix"></ul>
-											<div class="cart-footer">
-												<div class="cart-total clearfix">
-													<span class="pull-left uppercase">总计</span>
-													<span class="pull-right total">￥ 0</span>
-												</div>
-												<div class="text-right">
-													<a th:href="@{/customer/tocart}" class="btn btn-default btn-round view-cart">查看</a>
-												</div>
-											</div>
-										</div>
 										<!-- // SHOPPING CART -->
 									</li>
 								</ul>
@@ -828,282 +811,6 @@
 						</div>
 					</div>
 				</section>
-				<!-- 住宿套餐推荐 -->
-				<section class="section new-arrivals visible-items-6">
-					<div class="container">
-						<div class="row">
-							<header class="section-header clearfix col-sm-offset-3 col-sm-6">
-								<h3 class="section-title">住宿套餐推荐</h3>
-								<p class="section-teaser">Lorem ipsum dolor sit amet, consectetur adipiscing elit ac lobortis lacus</p>
-							</header>
-
-							<div class="clearfix"></div>
-
-							<!-- BEGIN CAROUSEL -->
-							<div id="new-arrivals-products" class="add-cart" data-product=".product" data-thumbnail=".entry-media .thumb" data-title=".entry-title > a" data-url=".entry-title > a" data-price=".entry-price > .price">
-
-								<div class="owl-controls clickable outside">
-									<div class="owl-buttons">
-										<div class="owl-prev"><i class="iconfont-angle-left"></i></div>
-										<div class="owl-next"><i class="iconfont-angle-right"></i></div>
-									</div>
-								</div>
-
-								<div class="owl-carousel owl-theme" data-visible-items="5" data-navigation="true" data-lazyload="true">
-									<div class="product" data-product-id="17">
-										<div class="entry-media">
-											<img th:src="@{/images/men/jacket/271865-0286_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<div class="circle ribbon ribbon-sale">Sale</div>
-													</li>
-													<li>
-														<a href="images/men/jacket/271865-0286_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="4.5" step="0.5" id="backing9" />
-													<div class="rateit" data-rateit-backingfld="#backing9" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐一</a>
-										</h5>
-											<div class="entry-price">
-												<s class="entry-discount">￥ 350.00</s>
-												<strong class="accent-color price">￥ 250.00</strong>
-											</div>
-										</div>
-									</div>
-
-									<div class="product" data-product-id="18">
-										<div class="entry-media">
-											<img th:src="@{/images/men/jacket/634082-0014_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<a href="images/men/jacket/634082-0014_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="4" step="0.5" id="backing10" />
-													<div class="rateit" data-rateit-backingfld="#backing10" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐二</a>
-										</h5>
-											<div class="entry-price">
-												<strong class="price">￥ 350.00</strong>
-											</div>
-										</div>
-									</div>
-
-									<div class="product" data-product-id="19">
-										<div class="entry-media">
-											<img th:src="@{/images/men/jacket/217365-0014_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<div class="circle ribbon ribbon-new">New</div>
-													</li>
-													<li>
-														<a href="images/men/jacket/217365-0014_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="3.5" step="0.5" id="backing11" />
-													<div class="rateit" data-rateit-backingfld="#backing11" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐三</a>
-										</h5>
-											<div class="entry-price">
-												<strong class="price">￥ 450.00</strong>
-											</div>
-										</div>
-									</div>
-
-									<div class="product" data-product-id="20">
-										<div class="entry-media">
-											<img th:src="@{/images/men/blazer/105797-1056_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<a href="images/men/blazer/105797-1056_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="5" step="0.5" id="backing12" />
-													<div class="rateit" data-rateit-backingfld="#backing12" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐四</a>
-										</h5>
-											<div class="entry-price">
-												<strong class="price">￥ 350.00</strong>
-											</div>
-										</div>
-									</div>
-
-									<div class="product" data-product-id="21">
-										<div class="entry-media">
-											<img th:src="@{/images/men/jumper/271866-0014_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<div class="circle ribbon ribbon-sale">Sale</div>
-													</li>
-													<li>
-														<a href="images/men/jumper/271866-0014_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="4.5" step="0.5" id="backing13" />
-													<div class="rateit" data-rateit-backingfld="#backing13" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐五</a>
-										</h5>
-											<div class="entry-price">
-												<s class="entry-discount">￥350.00</s>
-												<strong class="accent-color price">￥ 250.00</strong>
-											</div>
-										</div>
-									</div>
-
-									<div class="product" data-product-id="22">
-										<div class="entry-media">
-											<img th:src="@{/images/men/shirt/803500-6989_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<a href="images/men/shirt/803500-6989_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="4" step="0.5" id="backing14" />
-													<div class="rateit" data-rateit-backingfld="#backing14" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐六</a>
-										</h5>
-											<div class="entry-price">
-												<strong class="price">￥ 350.00</strong>
-											</div>
-										</div>
-									</div>
-
-									<div class="product" data-product-id="23">
-										<div class="entry-media">
-											<img th:src="@{/images/men/shirt/217360-0014_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<div class="circle ribbon ribbon-new">New</div>
-													</li>
-													<li>
-														<a href="images/men/shirt/217360-0014_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="3.5" step="0.5" id="backing15" />
-													<div class="rateit" data-rateit-backingfld="#backing15" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐七</a>
-										</h5>
-											<div class="entry-price">
-												<strong class="price">￥ 450.00</strong>
-											</div>
-										</div>
-									</div>
-
-									<div class="product" data-product-id="24">
-										<div class="entry-media">
-											<img th:src="@{/images/men/accessories/000095-0014_2_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<a href="images/men/accessories/000095-0014_2.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="5" step="0.5" id="backing16" />
-													<div class="rateit" data-rateit-backingfld="#backing16" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐八</a>
-										</h5>
-											<div class="entry-price">
-												<strong class="price">￥ 350.00</strong>
-											</div>
-										</div>
-									</div>
-								</div>
-
-							</div>
-							<!-- // END CAROUSEL -->
-
-						</div>
-					</div>
-				</section>
-			
 			</main>
 			<!-- 尾部 -->
 			<footer class="page-footer">
